--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -9,37 +9,40 @@
         "message": "Документация"
     },
     "ports_help_text": {
-        "message": "Порты, разделяемые запятыми, которые должны ожидать сообщения для перезагрузки расширений. Если вы разрабатываете несколько расширений одновременно, вам понадобится несколько портов."
+        "message": "«Advanced Extension Reloader Watch 1/22» создает сервер, который прослушивает указанный вами порт (по умолчанию 7220) и принимает подключения от «Advanced Extension Reloader2».\n\n«Advanced Extension Reloader2» подключается к этому серверу, используя указанный здесь порт, и ожидает события перезагрузки.\n\nКогда событие перезагрузки получено, оно автоматически перезагружает расширение, над которым вы работаете. Если вы работаете над несколькими расширениями сразу, вам следует указать порты для всех созданных серверов, разделяя их запятыми."
     },
     "click_action_help_text_chrome": {
-        "message": "Объект, определяющий, что происходит, когда вы кликаете на иконку расширения или используете горячую клавишу \"Перезагрузить расширение (основное действие)\", которую можно изменить пройдя по следующей ссылке: chrome://extensions/shortcuts.\n\nВозможные свойства:\n\nhard: boolean\ndefault: true\nСледует ли перезагружать расширение, а не просто текущую вкладку. Если установлено значение false, background-скрипт не будет перезагружен. Расширения не будут перезагружаться при изменении manifest.json, даже если установленно значение true, за исключением случая, когда вы используете функцию listen() из вспомогательного пакета \"Advanced Extension Reloader Watch 2\" в background-скрипте целевого расширения. Может быть совмещено со свойством \"all_tabs\".\n\nall_tabs: boolean\ndefault: false\nСледует ли перезагружать все вкладки, а не просто текущую.\n\next_id: string\ndefault: undefined\nId расширения для перезагрузки в \"hard\" режиме. Если значение опущено, будут перезагружены все расширения.\n\nplay_sound: boolean\ndefault: false\nСледует ли воспроизводить звук уведомления по завершении перезагрузки.\n\nafter_reload_delay: number\ndefault: 1000\nВремя, в миллисекундах, которое следует ждать после перезагрузки расширения, перед перезагрузкой закрытых вкладок. Если у вас возникают ошибки в расширении после перезагрузки его страниц или страницы расширения загружаются пустыми, вы можете попробовать увеличить это значение.\n\nПример:\n{\n    \"all_tabs\": false,\n    \"hard\": true,\n    \"ext_id\": \"ffhljpfecjcfjdaneehmhdgplkaafnbb\",\n    \"play_sound\": true\n}"
+        "message": "Объект, который настраивает поведение, инициируемое при нажатии на иконку Advanced Extension Reloader или использовании горячей клавиши «Активация расширения», задаваемой в chrome://extensions/shortcuts.\n\nПринимаемые свойства:\n\nhard: boolean\ndefault: true\nОпределяет, нужно ли перезагружать расширение полностью (true) или только текущую вкладку (false). Если установлено значение false, изменения в background-скрипте не будут применяться. Даже если установлено значение true, изменения в файле manifest.json не будут применяться, если только вы не используете функцию listen() из дополнительного npm-пакета «Advanced Extension Reloader Watch 2» в background-скрипте вашего расширения. Эта опция может использоваться в сочетании с all_tabs.\n\nall_tabs: boolean\ndefault: false\nУказывает, нужно ли перезагружать все открытые вкладки, а не только текущую.\n\next_id: string\ndefault: undefined\nОпределяет ID расширения, которое нужно перезагружать. Если оставить этот параметр undefined, будут перезагружаться все расширения.\n\nplay_notifications: boolean\ndefault: false\nУказывает, следует ли воспроизводить звуковые уведомления при успешной перезагрузке.\n\nafter_reload_delay: number\ndefault: 1000\nУказывает задержку в миллисекундах после перезагрузки расширения, прежде чем открывать все закрытые вкладки. Если ваше расширение сталкивается с проблемами, такими как ошибки или пустые страницы после перезагрузки, вы можете увеличить это значение.\n\nПример:\n{\n    \"all_tabs\": false,\n    \"hard\": true,\n    \"ext_id\": \"dphafhlelejgffkmbmnmomfehnekdnlj\",\n    \"play_sound\": true\n}"
     },
     "click_action_help_text_edge": {
-        "message": "Объект, определяющий, что происходит, когда вы кликаете на иконку расширения или используете горячую клавишу \"Перезагрузить расширение (основное действие)\", которую можно изменить пройдя по следующей ссылке: edge://extensions/shortcuts.\n\nВозможные свойства:\n\nhard: boolean\ndefault: true\nСледует ли перезагружать расширение, а не просто текущую вкладку. Если установлено значение false, background-скрипт не будет перезагружен. Расширения не будут перезагружаться при изменении manifest.json, даже если установленно значение true, за исключением случая, когда вы используете функцию listen() из вспомогательного пакета \"Advanced Extension Reloader Watch 2\" в background-скрипте целевого расширения. Может быть совмещено со свойством \"all_tabs\".\n\nall_tabs: boolean\ndefault: false\nСледует ли перезагружать все вкладки, а не просто текущую.\n\next_id: string\ndefault: undefined\nId расширения для перезагрузки в \"hard\" режиме. Если значение опущено, будут перезагружены все расширения.\n\nplay_sound: boolean\ndefault: false\nСледует ли воспроизводить звук уведомления по завершении перезагрузки.\n\nafter_reload_delay: number\ndefault: 1000\nВремя, в миллисекундах, которое следует ждать после перезагрузки расширения, перед перезагрузкой закрытых вкладок. Если у вас возникают ошибки в расширении после перезагрузки его страниц или страницы расширения загружаются пустыми, вы можете попробовать увеличить это значение.\n\nПример:\n{\n    \"all_tabs\": false,\n    \"hard\": true,\n    \"ext_id\": \"ffhljpfecjcfjdaneehmhdgplkaafnbb\",\n    \"play_sound\": true\n}"
+        "message": "Объект, который настраивает поведение, инициируемое при нажатии на иконку Advanced Extension Reloader или использовании горячей клавиши «Активация расширения», задаваемой в edge://extensions/shortcuts.\n\nПринимаемые свойства:\n\nhard: boolean\ndefault: true\nОпределяет, нужно ли перезагружать расширение полностью (true) или только текущую вкладку (false). Если установлено значение false, изменения в background-скрипте не будут применяться. Даже если установлено значение true, изменения в файле manifest.json не будут применяться, если только вы не используете функцию listen() из дополнительного npm-пакета «Advanced Extension Reloader Watch 2» в background-скрипте вашего расширения. Эта опция может использоваться в сочетании с all_tabs.\n\nall_tabs: boolean\ndefault: false\nУказывает, нужно ли перезагружать все открытые вкладки, а не только текущую.\n\next_id: string\ndefault: undefined\nОпределяет ID расширения, которое нужно перезагружать. Если оставить этот параметр undefined, будут перезагружаться все расширения.\n\nplay_notifications: boolean\ndefault: false\nУказывает, следует ли воспроизводить звуковые уведомления при успешной перезагрузке.\n\nafter_reload_delay: number\ndefault: 1000\nУказывает задержку в миллисекундах после перезагрузки расширения, прежде чем открывать все закрытые вкладки. Если ваше расширение сталкивается с проблемами, такими как ошибки или пустые страницы после перезагрузки, вы можете увеличить это значение.\n\nПример:\n{\n    \"all_tabs\": false,\n    \"hard\": true,\n    \"ext_id\": \"dphafhlelejgffkmbmnmomfehnekdnlj\",\n    \"play_sound\": true\n}"
     },
-    "context_menu_actions_help_text": {
-        "message": "Массив объектов с той же схемой, что и в \"Действие при клике на иконку расширения\", определяющий дополнительные действия перезагрузки, которые появляются в контекстном меню иконки расширения. Имейте в виду, что количество элементов в контекстном меню ограничено. Вы также можете использовать эти действия перезагрузки, используя одну из горячих клавиш \"Перезагрузить расширение X\", где X - позиция в массиве."
+    "context_menu_actions_help_text_chrome": {
+        "message": "Массив объектов, каждый из которых соответствует структуре, определённой в поле «Действие при нажатии на иконку расширения», определяющий дополнительные действия перезагрузки, которые должны быть включены в контекстное меню иконок расширения. Имейте ввиду, что в контекстном меню иконки расширения может быть не более шести действий. Кроме того, вы можете вызывать эти действия перезагрузки с помощью горячих клавиш «Перезагрузить расширение X», задаваемых в chrome://extensions/shortcuts, где X соответствует позиции действия в массиве + 1."
+    },
+    "context_menu_actions_help_text_edge": {
+        "message": "Массив объектов, каждый из которых соответствует структуре, определённой в поле «Действие при нажатии на иконку расширения», определяющий дополнительные действия перезагрузки, которые должны быть включены в контекстное меню иконок расширения. Имейте ввиду, что в контекстном меню иконки расширения может быть не более шести действий. Кроме того, вы можете вызывать эти действия перезагрузки с помощью горячих клавиш «Перезагрузить расширение X», задаваемых в edge://extensions/shortcuts, где X соответствует позиции действия в массиве + 1."
     },
     "ports_label_text": {
         "message": "Порты"
     },
     "click_action_label_text": {
-        "message": "Действие при клике на иконку расширения"
+        "message": "Действие при нажатии на иконку расширения"
     },
     "context_menu_actions_label_text": {
         "message": "Действия контекстного меню иконки расширения"
     },
     "reload_notification_volume_label_text": {
-        "message": "Громкость уведомления перезагрузки"
+        "message": "Громкость уведомлений"
     },
     "allow_theme_reload_label_text": {
-        "message": "Позволить перезагружать тему"
+        "message": "Разрешить перезагрузку темы"
     },
     "invalid_ports_input_error_text": {
-        "message": "Недопустимые настройки. Разделяйте отдельные порты запятыми."
+        "message": "Недопустимые настройки. Пожалуйста, разделяйте каждый порт запятой. Недействительные настройки не будут сохранены."
     },
     "invalid_reload_action_input_error_text": {
-        "message": "Недопустимые настройки. Кликните на кнопку ? чтобы просмотреть список разрешенных свойств. Убедитесь, что вы предоставили действительный JSON. Недопустимые настройки не будут сохранены."
+        "message": "Недопустимые настройки. Нажмите кнопку «?», чтобы просмотреть список разрешенных свойств. Убедитесь, что ваш JSON корректен. Недействительные настройки не будут сохранены."
     },
     "docs_link_text": {
         "message": "📄 Документация"
@@ -56,16 +59,13 @@
     "docs_link_href": {
         "message": "https://github.com/loftyshaky/advanced-extension-reloader/blob/master/README-RU.md#content"
     },
-    "suspend_automatic_reload_context_menu_item": {
+    "pause_automatic_reload_context_menu_item": {
         "message": "Приостановить автоматическую перезагрузку"
     },
     "resume_automatic_reload_context_menu_item": {
         "message": "Возобновить автоматическую перезагрузку"
     },
-    "reload_main_hotkey": {
-        "message": "Перезагрузить расширение (основное действие)"
-    },
-    "suspend_or_resume_automatic_reload_hotkey": {
+    "pause_or_resume_automatic_reload_hotkey": {
         "message": "Приостановить/возобновить автоматическую перезагрузку"
     },
     "reload_1_hotkey": {
